# learning-management-system

./: README.md
client/: .env.examplle  codegen.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: ScheduleTable.tsx
client/src/components/admin/: AddCategory.tsx  AddCourse.tsx
client/src/components/assignment/: AssignmentListItem.tsx  CreateAssignment.tsx
client/src/components/auth/: FormContainer.tsx
client/src/components/common/: Course.tsx  CourseCard.tsx  Header.tsx
client/src/components/course/: About.tsx  AddCourseTeacher.tsx  Assignments.tsx  Classes.tsx  CreateClass.tsx  (+8 more)
client/src/constants/: const.ts  images.ts
client/src/context/: userContext.tsx
client/src/graphql/: mutations.ts  query.ts
client/src/hooks/: useAssignmentsQuery.tsx  useUserQuery.tsx
client/src/pages/: 404.tsx  Admin.tsx  Assignment.tsx  Class.tsx  Course.tsx  Courses.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Register.tsx  Schedule.tsx  Submission.tsx  Submissions.tsx  Video.tsx
server/: .gitignore  db.sh  main.py  pyproject.toml  run.sh  schema.py  wsockets.py
server/db/: __init__.py
server/middleware/: JWTManager.py
server/models/: Assignment.py  Attendance.py  Category.py  Class.py  Course.py  CourseTeacher.py  Enrollment.py  FileResource.py  Question.py  Resource.py  Submission.py  User.py
server/mygraphql/resolvers/: assignment.py  auth.py  category.py  classes.py  course.py  course_teacher.py  enrollment.py  question.py  resource.py  submission.py  user.py
server/utils/: fns.py  hash.py
