[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["maskudo <manujkarki101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ariadne = {extras = ["file-uploads"], version = "^0.20.1"}
sqlalchemy = "^2.0.21"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy-utils = "^0.41.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
